<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.gercep.RextraMainActivity">

    <!-- Include Toolbar -->
    <include
        android:id="@+id/rt_bar"
        layout="@layout/toolbar_gercep"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- NestedScrollView -->
    <androidx.core.widget.NestedScrollView
        android:id="@+id/nsv_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toTopOf="@id/rb_bar"
        app:layout_constraintTop_toBottomOf="@id/rt_bar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <ImageView
                android:id="@+id/iv_logo"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:src="@drawable/rextra_gercep_logo"
                android:contentDescription="@string/rextra_gercep"
                android:layout_marginBottom="6dp"/>

            <TextView
                android:id="@+id/tv_memperkenalkan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                style="@style/BodySmallRegular"
                android:text="@string/memperkenalkan"
                android:layout_marginBottom="4dp"/>

            <TextView
                android:id="@+id/tv_rextra_gercep"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/rextra_gercep"
                style="@style/Heading3"
                android:layout_marginBottom="10dp"/>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                app:cardCornerRadius="8dp"
                android:backgroundTint="#CCE3F2"
                android:padding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_tentang_gercep"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tentang_gercep"
                        style="@style/BodySmallBold"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="4dp"/>

                    <TextView
                        android:id="@+id/tv_deskripsi_gercep_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="2dp"
                        android:layout_marginRight="16dp"

                        android:text="@string/deskripsi_gercep_1"
                        android:justificationMode="inter_word"
                        android:hyphenationFrequency="normal"/>

                    <TextView
                        android:id="@+id/tv_deskripsi_gercep_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="2dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginBottom="24dp"
                        android:text="@string/deskripsi_gercep_2"
                        android:justificationMode="inter_word"
                        android:hyphenationFrequency="normal"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="50dp"
                app:cardCornerRadius="8dp"
                android:backgroundTint="#D1E9D9"
                android:padding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/tv_petunjuk_gercep"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/petunjuk_gercep"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginTop="10dp"
                        style="@style/BodySmallBold"
                        android:layout_marginBottom="4dp"/>

                    <TextView
                        android:id="@+id/tv_detail_petunjuk_gercep_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="2dp"
                        android:layout_marginRight="16dp"

                        android:text="@string/detail_petunjuk_gercep_1"/>

                    <TextView
                        android:id="@+id/tv_detail_petunjuk_gercep_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="2dp"
                        android:layout_marginRight="16dp"

                        android:text="@string/detail_petunjuk_gercep_2"/>

                    <TextView
                        android:id="@+id/tv_detail_petunjuk_gercep_3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="2dp"
                        android:layout_marginRight="16dp"

                        android:text="@string/detail_petunjuk_gercep_3"/>

                    <TextView
                        android:id="@+id/tv_detail_petunjuk_gercep_4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="2dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginBottom="24dp"

                        android:text="@string/detail_petunjuk_gercep_4"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <!-- Bottom Bar -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/rb_bar"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_login_onboarding"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/primary_button"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/coba_fitur"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintWidth_percent="0.9" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>